--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "npm": "^8.19.1"
+        "@heroicons/react": "^2.0.11",
+        "@vitejs/plugin-react": "^2.1.0",
+        "npm": "^8.19.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.0"
     }
 }
