--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "npm": "^8.19.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-hot-toast": "^2.4.0"
+        "react-hot-toast": "^2.4.0",
+        "react-js-pagination": "^3.0.3"
     }
 }
