--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.0",
-        "react-js-pagination": "^3.0.3"
+        "react-js-pagination": "^3.0.3",
+        "react-select": "^5.4.0"
     }
 }
